[gd_scene load_steps=12 format=2]

[ext_resource path="res://Board.gd" type="Script" id=1]
[ext_resource path="res://art/tile/mountain.png" type="Texture" id=2]
[ext_resource path="res://art/tile/grass.png" type="Texture" id=3]
[ext_resource path="res://Pathfinding.gd" type="Script" id=4]
[ext_resource path="res://MapMaker.gd" type="Script" id=5]
[ext_resource path="res://Unit.tscn" type="PackedScene" id=6]
[ext_resource path="res://TurnManager.gd" type="Script" id=7]
[ext_resource path="res://ui/GUI.gd" type="Script" id=8]
[ext_resource path="res://ui/theme/UITheme.tres" type="Theme" id=9]
[ext_resource path="res://resource/unit/TestUnit.tres" type="Resource" id=10]

[sub_resource type="TileSet" id=1]
2/name = "grass.png 2"
2/texture = ExtResource( 3 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 128, 128 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "mountain.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 128, 128 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[node name="Board" type="Node2D"]
script = ExtResource( 1 )
tile_size = 128

[node name="MapMaker" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 65536, 2, 0, 65537, 2, 0, 65538, 2, 0, 65539, 2, 0, 65540, 2, 0, 65541, 2, 0, 65542, 2, 0, 65543, 2, 0, 65544, 2, 0, 65545, 2, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 131072, 2, 0, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 131076, 3, 0, 131077, 2, 0, 131078, 2, 0, 131079, 2, 0, 131080, 3, 0, 131081, 2, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 196608, 2, 0, 196609, 2, 0, 196610, 2, 0, 196611, 3, 0, 196612, 3, 0, 196613, 2, 0, 196614, 2, 0, 196615, 2, 0, 196616, 3, 0, 196617, 2, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 262144, 2, 0, 262145, 2, 0, 262146, 2, 0, 262147, 2, 0, 262148, 2, 0, 262149, 2, 0, 262150, 2, 0, 262151, 2, 0, 262152, 2, 0, 262153, 2, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 327680, 2, 0, 327681, 2, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 327688, 2, 0, 327689, 2, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0 )
script = ExtResource( 5 )

[node name="TurnManager" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Tiles" type="Node2D" parent="."]

[node name="Units" type="Node2D" parent="."]

[node name="Unit" parent="Units" instance=ExtResource( 6 )]
position = Vector2( 179, 179 )
data = ExtResource( 10 )

[node name="Unit2" parent="Units" instance=ExtResource( 6 )]
position = Vector2( 679, 324 )
data = ExtResource( 10 )
side = 1

[node name="Unit3" parent="Units" instance=ExtResource( 6 )]
position = Vector2( 445, 560 )
data = ExtResource( 10 )
side = 1

[node name="Pathfinding" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Line2D" type="Line2D" parent="Pathfinding"]
width = 5.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 8 )

[node name="UnitInfoPanel" type="PanelContainer" parent="CanvasLayer/GUI"]
anchor_top = 0.773611
anchor_right = 0.261719
anchor_bottom = 1.0
theme = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="CanvasLayer/GUI/UnitInfoPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 328.0
margin_bottom = 156.0
theme = ExtResource( 9 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/GUI/UnitInfoPanel/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GUI/UnitInfoPanel/Panel/MarginContainer"]
margin_right = 297.0
margin_bottom = 125.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TeamContainer" type="HBoxContainer" parent="CanvasLayer/GUI/UnitInfoPanel/Panel/MarginContainer/VBoxContainer"]
margin_right = 297.0
margin_bottom = 28.0

[node name="Title" type="Label" parent="CanvasLayer/GUI/UnitInfoPanel/Panel/MarginContainer/VBoxContainer/TeamContainer"]
margin_right = 57.0
margin_bottom = 28.0
theme = ExtResource( 9 )
text = "Team:"
align = 1
valign = 1

[node name="Value" type="Label" parent="CanvasLayer/GUI/UnitInfoPanel/Panel/MarginContainer/VBoxContainer/TeamContainer"]
margin_left = 61.0
margin_right = 175.0
margin_bottom = 28.0
theme = ExtResource( 9 )
text = "#active_side"
align = 1
valign = 1

[node name="UnitNameContainer" type="HBoxContainer" parent="CanvasLayer/GUI/UnitInfoPanel/Panel/MarginContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 297.0
margin_bottom = 60.0

[node name="Title" type="Label" parent="CanvasLayer/GUI/UnitInfoPanel/Panel/MarginContainer/VBoxContainer/UnitNameContainer"]
margin_right = 61.0
margin_bottom = 28.0
theme = ExtResource( 9 )
text = "Name:"
align = 1
valign = 1

[node name="Value" type="Label" parent="CanvasLayer/GUI/UnitInfoPanel/Panel/MarginContainer/VBoxContainer/UnitNameContainer"]
margin_left = 65.0
margin_right = 176.0
margin_bottom = 28.0
theme = ExtResource( 9 )
text = "#unit_name"
align = 1
valign = 1

[node name="HPContainer" type="HBoxContainer" parent="CanvasLayer/GUI/UnitInfoPanel/Panel/MarginContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 297.0
margin_bottom = 92.0

[node name="Title" type="Label" parent="CanvasLayer/GUI/UnitInfoPanel/Panel/MarginContainer/VBoxContainer/HPContainer"]
margin_right = 32.0
margin_bottom = 28.0
theme = ExtResource( 9 )
text = "HP:"
align = 1
valign = 1

[node name="Value" type="Label" parent="CanvasLayer/GUI/UnitInfoPanel/Panel/MarginContainer/VBoxContainer/HPContainer"]
margin_left = 36.0
margin_right = 104.0
margin_bottom = 28.0
theme = ExtResource( 9 )
text = "#hp/hp"
align = 1
valign = 1

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/GUI/UnitInfoPanel/Panel/MarginContainer/VBoxContainer/HPContainer"]
margin_left = 108.0
margin_right = 297.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
percent_visible = false

[node name="DamageContainer" type="HBoxContainer" parent="CanvasLayer/GUI/UnitInfoPanel/Panel/MarginContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 297.0
margin_bottom = 124.0

[node name="Title" type="Label" parent="CanvasLayer/GUI/UnitInfoPanel/Panel/MarginContainer/VBoxContainer/DamageContainer"]
margin_right = 147.0
margin_bottom = 28.0
theme = ExtResource( 9 )
text = "Attack Damage:"
align = 1
valign = 1

[node name="Value" type="Label" parent="CanvasLayer/GUI/UnitInfoPanel/Panel/MarginContainer/VBoxContainer/DamageContainer"]
margin_left = 151.0
margin_right = 240.0
margin_bottom = 28.0
theme = ExtResource( 9 )
text = "#att_dmg"
align = 1
valign = 1
